@@ -1,3 +1,9 @@
+2006-03-10  Don Allingham  <don@gramps-project.org>
+	* src/Mime/PythonMime.py: import gtk
+	* src/DataViews/_FamilyList.py: family_add explict function added
+	* src/GrampsWidgets.py: use STOCK_DIALOG_INFO as a fallback if
+	STOCK_INFO does not exist (FreeBSD?)
+
 2006-03-09  Don Allingham  <don@gramps-project.org>
 	* src/AddMedia.py: avoid double commit
 	* src/GrampsDb/_GrampsDbBase.py: fix add of places in internal map
